# ptx_runner

./: CMakeLists.txt  README.md  main.c  mmap_file.h  test.cu  test.ptx
